# Dyops-Systems

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml
.github/workflows/: validate.yml
backend/: main.py  requirements.txt  webhooks.py
deploy/: nginx.conf
docs/: DEMO_RUNBOOK.md  HISTORICAL_EVALUATION.md  INTEGRATION_EXAMPLES.md  METHODOLOGY.md  TECHNICAL_LEAVE_BEHIND.md
dyops_core/: .gitignore  Cargo.toml  README.md  bench_batch.py  bench_historical_eval.py  bench_sentinel_tick.py  binance_feed.py  dashboard.py  database.py  dyops_ts.db-shm  dyops_ts.db-wal  instruments.py  pyproject.toml  scenario_test.py  sentinel.py
dyops_core/.streamlit/: config.toml
dyops_core/benches/: tick_hotpath.rs
dyops_core/historical_eval/: __init__.py  calibration.py  catalog.py  cli.py  data.py  detectors.py  metrics.py  models.py  report.py  runner.py
dyops_core/historical_eval/fixtures/: synthetic_reference.csv
dyops_core/historical_eval/manifests/: synthetic_reference.events.json
dyops_core/scenarios/: __init__.py  base.py  catalog.py  metrics.py  run.py  runner.py
dyops_core/src/: lib.rs  observer.rs  sentinel.rs
dyops_core/tests/: test_historical_eval.py  test_scenario_thresholds.py  test_scenarios.py  test_sentinel_policy.py
examples/: incident-export.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
reports/: PERF_BUDGET.md  historical_evaluation.md  robustness_report.md
scripts/: demo.sh  demo_local.sh  generate_robustness_report.py  webhook_receiver.py
(+25 files in other folders)
