[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "dyops_core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "loguru>=0.7",
    "google-genai>=1.0",
    "streamlit>=1.39",
    "plotly>=5.24",
    "websockets>=13.0",
]

[tool.maturin]
